fix(app): form view on tablet device

--- a/week_5/multi-step-form/src/app/layout/layout.component.css
+++ b/week_5/multi-step-form/src/app/layout/layout.component.css
@@ -145,3 +145,9 @@
     justify-content: center;
   }
 }
+
+@media (max-width: 884px) {
+  #layout-container {
+    width: 90dvw;
+  }
+}
